--- a/.gitignore
+++ b/.gitignore
@@ -26,5 +26,8 @@ build/Release
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
 
-# Outputs
-output/*.png
+# Inputs
+input/*.png
+
+# Generated network
+network.js
