fix .gitignore | edit node-captcha to remove noise

--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,9 @@ build/Release
 
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
-node_modules
+node_modules/pngjs
+node_modules/synaptic
+node_modules/underscore
 
 # Inputs
 input/*.png
